--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - img/welcome-one.png
+    - img/welcome-two.png
+    - img/welcome-three.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
